--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "author": "Bruno Busnelli",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "express-handlebars": "^7.1.2",
+        "handlebars": "^4.7.8",
+        "socket.io": "^4.7.5"
     }
 }
